Fix project popup descriptions having margin bottom, affecting scrollbar

--- a/src/app/views/popups/comic-project-showcase-popup/comic-project-showcase-popup.component.scss
+++ b/src/app/views/popups/comic-project-showcase-popup/comic-project-showcase-popup.component.scss
@@ -26,6 +26,7 @@
 
         .description {
             text-align: center;
+            margin: 0;
         }
     }
 
