--- a/src/app/views/popups/generic-project-showcase-popup/generic-project-showcase-popup.component.scss
+++ b/src/app/views/popups/generic-project-showcase-popup/generic-project-showcase-popup.component.scss
@@ -72,6 +72,7 @@
         .description {
             text-align: center;
             padding: 0 2em;
+            margin: 0;
         }
     }
 
